Update The Restaurant Battle of Neighborhoods in Coventry.ipynb

--- a/The Restaurant Battle of Neighborhoods in Coventry.ipynb
+++ b/The Restaurant Battle of Neighborhoods in Coventry.ipynb
@@ -2273,8 +2273,8 @@
     }
    ],
    "source": [
-    "CLIENT_ID = 'JNQNPE3LKP1PIVVZEAK1SMVFFD05ODXGE3GG2IXKPXB3E4VN' # your Foursquare ID\n",
-    "CLIENT_SECRET = 'T04CPFWXMTGZDMSTJR1ET3MW3UIWAO3FI2KZUSOZJOA2C4WE' # your Foursquare Secret\n",
+    "CLIENT_ID = '...' # your Foursquare ID\n",
+    "CLIENT_SECRET = '...' # your Foursquare Secret\n",
     "VERSION = '20180605' # Foursquare API version\n",
     "LIMIT = 100 # A default Foursquare API limit value\n",
     "\n",
